# omc-diff

./: CMakeLists.txt  OSMC-License.txt  OSMC-USAGE-MODE.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  release.yml
